--- a/generate-param-docs/parameter-docs/GPIO/IO13.md
+++ b/generate-param-docs/parameter-docs/GPIO/IO13.md
@@ -1,5 +1,6 @@
-# `IO13`
+# Parameter `IO13`
 Default Value: `input-pullup disabled 10 false false`
 
 ## Description
-## Example
+Please fill me with an explanation and useful links
+
