--- a/generate-param-docs/parameter-docs/GPIO/IO12.md
+++ b/generate-param-docs/parameter-docs/GPIO/IO12.md
@@ -1,5 +1,6 @@
-# `IO12`
+# Parameter `IO12`
 Default Value: `input-pullup disabled 10 false false`
 
 ## Description
-## Example
+Please fill me with an explanation and useful links
+
